--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -102,7 +102,7 @@
 					android:textColor="@color/COLOR_SUBTEXT"
 					android:textSize="15px"
 					android:textStyle="bold"
-					android:background="@drawable/leftbutton"/>
+					android:background="@drawable/button_left_hover"/>
 				
 				<Button 
 					android:id="@+id/myCreditCards"
