--- a/res/layout/row_cell.xml
+++ b/res/layout/row_cell.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<com.insidetip.singtel.screen.CustomImageView
+<com.singtel.ilovedeals.screen.CustomImageView
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/cell"
 	android:layout_width="wrap_content"
