--- a/res/layout/merchant_list.xml
+++ b/res/layout/merchant_list.xml
@@ -5,6 +5,7 @@
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
 	android:orientation="horizontal"
+	android:gravity="center_vertical"
 	android:layout_marginRight="1px"
 	android:background="@drawable/list_bg">
 	
@@ -13,53 +14,47 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:src="@drawable/default_icon" 
-		android:layout_marginRight="5px" 
-		android:layout_marginTop="5px"/>
+		android:layout_marginRight="5px"/>
 	
 	<LinearLayout
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:orientation="vertical" 
-		android:layout_marginTop="5px">
+		android:orientation="vertical">
 		
 		<TextView
 			android:id="@+id/distance"
-			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:gravity="right|center_vertical" 
 			android:textSize="12px" 
 			android:textStyle="bold" 
 			android:typeface="sans"
 			android:textColor="@color/COLOR_BLACK"
-			android:text="1.1 km" android:layout_marginRight="18px"/>
+			android:text="1.1 km" android:layout_marginRight="18px" android:layout_width="fill_parent"/>
 		
 		<TextView
 			android:id="@+id/merchantName"
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:gravity="left|center_vertical"
-			android:textSize="16px" 
+			android:textSize="15px" 
 			android:textStyle="bold" 
 			android:typeface="sans"
 			android:textColor="@color/COLOR_BLACK"
 			android:text="Shaw Cinema" 
-			android:ellipsize="marquee" 
-			android:singleLine="true" 
-			android:maxLines="1" android:layout_marginRight="18px"/>
+			android:ellipsize="end" 
+			android:maxLines="2" android:layout_marginRight="18px"/>
 			
 		<TextView
 			android:id="@+id/merchantAddress"
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:gravity="left|center_vertical"
-			android:textSize="12px" 
+			android:textSize="10px" 
 			android:textStyle="bold" 
 			android:typeface="sans"
 			android:textColor="@color/COLOR_SUBTEXT"
-			android:paddingBottom="1px"
 			android:text="360 Balistier Road, Shaw Plaza, #0..." 
-			android:ellipsize="marquee" 
-			android:singleLine="true" 
-			android:maxLines="1" android:layout_marginRight="18px"/>
+			android:ellipsize="end" 
+			android:layout_marginRight="18px" android:paddingBottom="5px"/>
 	</LinearLayout>
 </LinearLayout>
