--- a/res/layout/footer_template.xml
+++ b/res/layout/footer_template.xml
@@ -111,8 +111,8 @@
 			android:layout_marginBottom="3px" />
 	
 		<Button
-			android:id="@+id/searchButton"
-			android:background="@drawable/searches"
+			android:id="@+id/augmentedButton"
+			android:background="@drawable/arfooter"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="3px"
