--- a/res/layout/bankdata.xml
+++ b/res/layout/bankdata.xml
@@ -220,7 +220,7 @@
 						android:textSize="15px"
 						android:typeface="sans"
 						android:textColor="@color/COLOR_SUBTEXT"
-						android:text="DBS Black American Express" />
+						android:text="DBS Credit/Debit Visa or MasterCard" />
 				</LinearLayout>
 			
 				<LinearLayout
@@ -243,7 +243,7 @@
 						android:textSize="15px"
 						android:typeface="sans"
 						android:textColor="@color/COLOR_SUBTEXT"
-						android:text="DBS Live Fresh Platinum" />
+						android:text="DBS American Express Cards" />
 				</LinearLayout>
 				
 				<LinearLayout
@@ -266,7 +266,7 @@
 						android:textSize="15px"
 						android:typeface="sans"
 						android:textColor="@color/COLOR_SUBTEXT"
-						android:text="DBS Platinum MasterCard" />			
+						android:text="POSB Credit/Debit Cards" />			
 				</LinearLayout>
    			</LinearLayout>
 			
