--- a/res/layout/bankdata.xml
+++ b/res/layout/bankdata.xml
@@ -245,31 +245,7 @@
 						android:textColor="@color/COLOR_SUBTEXT"
 						android:text="DBS American Express Cards" />
 				</LinearLayout>
-				
-				<LinearLayout
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:background="@drawable/table_row"
-					android:orientation="horizontal">
-					
-					<CheckBox
-						android:id="@+id/dbsplatinummastercard"
-						android:checked="true"
-						android:layout_marginLeft="10px"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:button="@drawable/checkbox" />
-					
-					<TextView
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:textSize="15px"
-						android:typeface="sans"
-						android:textColor="@color/COLOR_SUBTEXT"
-						android:text="POSB Credit/Debit Cards" />			
-				</LinearLayout>
    			</LinearLayout>
-			
 			
 			<!-- OCBC -->
 			<LinearLayout
@@ -687,11 +663,61 @@
 				</LinearLayout>   				
    			</LinearLayout>
 			
+			<!-- POSB -->
+			<LinearLayout
+   				android:id="@+id/posbGroup"
+   				android:layout_width="fill_parent"
+   				android:layout_height="wrap_content"
+   				android:orientation="vertical" 
+   				android:layout_marginBottom="10px">
+   				
+   				<LinearLayout
+					android:layout_width="fill_parent"
+				    android:layout_height="wrap_content"
+				    android:orientation="horizontal">
+				    
+				    <TextView
+						android:id="@+id/merchantReviews"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="POSB"
+						android:textColor="@color/COLOR_BLACK"
+						android:textStyle="bold"
+						android:textSize="20px"
+						android:typeface="sans" />
+				</LinearLayout>
+				
+				<LinearLayout
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:background="@drawable/table_row"
+					android:orientation="horizontal">
+					
+					<CheckBox
+						android:id="@+id/dbsplatinummastercard"
+						android:checked="true"
+						android:layout_marginLeft="10px"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:button="@drawable/checkbox" />
+					
+					<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:textSize="15px"
+						android:typeface="sans"
+						android:textColor="@color/COLOR_SUBTEXT"
+						android:text="POSB Credit/Debit Cards" />			
+				</LinearLayout>
+   			</LinearLayout>
+			
+			<!-- UOB -->
 			<LinearLayout
    				android:id="@+id/uobGroup"
    				android:layout_width="fill_parent"
    				android:layout_height="wrap_content"
-   				android:orientation="vertical" android:layout_marginBottom="10px">
+   				android:orientation="vertical" 
+   				android:layout_marginBottom="10px">
    				
    				<LinearLayout
 					android:layout_width="fill_parent"
